cmake_minimum_required(VERSION 3.20)
project(algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(
        algorithm
        acwing/basic/ch01/quick_sort/785/main.cpp
        acwing/basic/ch01/quick_sort/786/main.cpp
        acwing/basic/ch01/merge_sort/787/main.cpp
        acwing/basic/ch01/merge_sort/788/main.cpp
        acwing/basic/ch01/binary_search/789/main.cpp
        acwing/basic/ch01/binary_search/790/main.cpp
        acwing/basic/ch01/high_precision/791/main.cpp
        acwing/basic/ch01/high_precision/792/main.cpp
        acwing/basic/ch01/high_precision/793/main.cpp
        acwing/basic/ch01/high_precision/794/main.cpp
        acwing/basic/ch01/prefix_sum_difference/795/main.cpp
        acwing/basic/ch01/prefix_sum_difference/796/main.cpp
        acwing/basic/ch01/prefix_sum_difference/797/main.cpp
        acwing/basic/ch01/prefix_sum_difference/798/main.cpp
        acwing/basic/ch01/double_pointer/799/main.cpp acwing/basic/ch01/double_pointer/800/main.cpp acwing/basic/ch01/double_pointer/2816/main.cpp)
